--- a/ec2_deploy.yml
+++ b/ec2_deploy.yml
@@ -13,6 +13,53 @@
         assign_public_ip: yes
         wait: yes
         count: 1
+        group: eshop
         aws_access_key: "{{access_key}}"
         aws_secret_key: "{{secret_key}}"
         security_token: "{{session_token}}"
+      register: ec2
+    - name: Add instance host to group
+      add_host:
+        hostname: "{{ item.public_ip }}"
+        groupname: launched
+      loop: "{{ ec2.instances }}"
+
+- name: Configure EC2
+  hosts: launched
+  connection: ssh
+
+  tasks:
+    - name: Install Git and Docker
+      yum:
+        name:
+          - git
+          - docker
+        state: latest
+        update_cache: yes
+      become: yes
+    - service:
+        name: docker
+        state: started
+        enabled: yes
+      become: yes
+    - name: Start Docker on startup
+      shell: systemctl enable docker
+      become: yes
+    - name: Set rights to Docker
+      shell: usermod -a -G docker ec2-user
+      become: yes
+    - name: Get eshop from GIT
+      git:
+        repo: 'https://github.com/sidapetr/4IT572_docker.git'
+        dest: ./app
+    - name: Build Docker with e-shop
+      shell: cd app && docker build -t myeshop:latest .
+      become: yes
+    - name: Run Docker with eshop
+      shell: docker run -p 80:3000 myeshop
+      async: 45
+      poll: 0
+      become: yes
+    - wait_for:
+        port:
+          80
